add authentication tests
