# app/application/static/swagger.yaml
@@ -3,7 +3,7 @@ info:
   description: >-
     This is a prototype version of a centralized ULI server.  You can find out more about ULI at
     [https://reso.org](https://reso.org). For this proof of concept, you can use the api
-    key `_admin_token` to test the authorization filters.
+    key `_api_key` to test the authorization filters.
   version: 1.0.0
   title: Centralized Universal Licensee Identification Service
   termsOfService: >-
@@ -19,6 +19,8 @@ tags:
   - name: registration
     description: Registration and Query endpoints
   - name: admin
+    security:
+      - ApiKeyAuth: []
     description: Administrative Functions like data generation, delete
 schemes:
   - http
@@ -73,6 +75,8 @@ paths:
         - admin
       summary: Verifies if a ULI is in the registry
       description: ''
+      security:
+        - ApiKeyAuth: []
       produces:
         - application/json
       consumes:
@@ -95,6 +99,8 @@ paths:
         - admin
       summary: Generates fake licensee data
       description: ''
+      security:
+        - ApiKeyAuth: []
       produces:
         - application/json
       consumes:
@@ -117,6 +123,8 @@ paths:
         - admin
       summary: Removes a ULI
       description: ''
+      security:
+        - ApiKeyAuth: []
       produces:
         - application/json
       consumes:
@@ -133,18 +141,18 @@ paths:
           description: successful operation
           schema:
             $ref: '#/definitions/DeleteResponse'
-# securityDefinitions:
-#   api_key:
-#     type: apiKey
-#     name: token
-#     in: header
+securityDefinitions:
+    ApiKeyAuth:        # arbitrary name for the security scheme
+      type: apiKey
+      in: header       # can be "header", "query" or "cookie"
+      name: X-API-KEY  # name of the header, query parameter or cookie
 definitions:
   AdminFindRequest:
     type: object
     properties:
       token:
         type: string
-        example: _admin_token
+        example: _api_key
       uli:
         type: string
         example: 6032f18a79272c4ef28d4119      
@@ -184,7 +192,7 @@ definitions:
     properties:
       token:
         type: string
-        example: _admin_token
+        example: _api_key
       uli:
         type: string
         example: 602c6bbead2cef1872ea1e8d      
@@ -201,7 +209,7 @@ definitions:
     properties:
       token:
         type: string
-        example: _admin_token
+        example: _api_key
       NumLicensees:
         type: int
         example: 100      
